# async-openai

examples/assistants-function-calling-example/: Cargo.toml  README.md
examples/assistants-function-calling-example/src/: main.rs
