[package]
name = "assistants-function-calling-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
whoami = "1.4.1"